<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.tccart.MainActivity"
    android:background="@color/lightGrey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/ic_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title"
                    android:id="@+id/textView"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/current_customer"
                            android:id="@+id/textView3"
                            android:layout_marginRight="15dp" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/txtCurrCustomer" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7" >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="9" >

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/total_due"
                                android:id="@+id/textView2"
                                android:layout_marginRight="15dp" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"
                                android:ems="4"
                                android:id="@+id/txtTotalDue" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_weight="3">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:gravity="center_vertical|center_horizontal">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="left|center" >

                            <ImageButton
                                android:id="@+id/btnScanCard"
                                android:layout_width="80dp"
                                android:layout_height="75dp"
                                android:background="@null"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_scan"
                                android:layout_gravity="center"
                                android:layout_marginBottom="0dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:clickable="false"
                                android:text="@string/scan_card"
                                android:layout_marginTop="10dp" />
                        </FrameLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="3">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="left|center" >

                            <ImageButton
                                android:id="@+id/btnEditCustomer"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@null"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_edit"
                                android:layout_gravity="center"
                                android:layout_marginBottom="0dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:clickable="false"
                                android:text="@string/edit_customer" />
                        </FrameLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="left|center" >

                            <ImageButton
                                android:id="@+id/btnProcessTransaction"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@null"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_process"
                                android:layout_gravity="center"
                                android:layout_marginBottom="0dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:clickable="false"
                                android:text="@string/process_transaction" />
                        </FrameLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|center_horizontal">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical|center_horizontal">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="left|center" >

                            <ImageButton
                                android:id="@+id/btnAddCustomer"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@null"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_action_add"
                                android:layout_gravity="center"
                                android:layout_marginBottom="0dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:clickable="false"
                                android:text="@string/add_customer" />
                        </FrameLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical|center_horizontal">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="left|center" >

                            <ImageButton
                                android:id="@+id/btnLookupCustomer"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@null"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_lookup"
                                android:layout_gravity="center"
                                android:layout_marginBottom="0dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:clickable="false"
                                android:text="@string/view_list" />
                        </FrameLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <FrameLayout android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="left|center">
                            <ImageButton
                                android:id="@+id/btnCreditCard"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@null"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_credit"
                                android:layout_gravity="center"
                                android:layout_marginBottom="5dp">
                            </ImageButton>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:clickable="false"
                                android:text="@string/process_credit_card" >
                            </TextView>
                        </FrameLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
